--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 _build
 opam-depext
 depext.native
+vendor/result/result.ml
 shell/build.sh
+_opam
 *.cmi
 *.cmo
 *.cmx
@@ -9,9 +11,4 @@ shell/build.sh
 *.cmxa
 *.a
 *.stamp
-src_ext/._bcdi/
-src_ext/._d/
-src_ext/._ncdi/
-src_ext/cmdliner-0.9.8.tbz
-src_ext/cmdliner/
 .*.swp
